<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/activity_container"
    tools:context=".controller.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Digite seu nome"
        android:id="@+id/nameTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nameEditText"
        android:layout_below="@+id/nameTextView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Digite sua idade"
        android:id="@+id/ageTextView"
        android:layout_below="@+id/nameEditText"
        android:layout_alignEnd="@+id/nameTextView"
        android:layout_marginTop="41dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/ageEditText"
        android:layout_below="@+id/ageTextView"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/nameEditText"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enviar"
        android:id="@+id/submitButton"
        android:layout_below="@+id/ageEditText"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Bem-Vindo"
        android:id="@+id/welcomeTextView"
        android:layout_below="@+id/submitButton"
        android:layout_alignStart="@+id/ageTextView"
        android:textAlignment="center"
        android:layout_marginTop="78dp"
        android:visibility="invisible"
        android:layout_alignEnd="@+id/submitButton"/>
</RelativeLayout>
